Write implementation for most methods